<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mD5-43-gLT">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--News Search View Controller-->
        <scene sceneID="rAe-Gq-TMq">
            <objects>
                <viewController id="KIs-mH-x4w" customClass="NewsSearchViewController" customModule="AwesomeNewsApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="BFt-lt-JzO">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cyY-xG-j5b">
                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <outlet property="delegate" destination="KIs-mH-x4w" id="mFT-ms-DiJ"/>
                                </connections>
                            </tableView>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search for news" translatesAutoresizingMaskIntoConstraints="NO" id="4Qq-sF-anC">
                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
                                <color key="barTintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="webSearch" keyboardAppearance="alert" returnKeyType="search" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                <connections>
                                    <outlet property="delegate" destination="KIs-mH-x4w" id="w9l-zw-qpq"/>
                                </connections>
                            </searchBar>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="cyY-xG-j5b" firstAttribute="top" secondItem="4Qq-sF-anC" secondAttribute="bottom" id="4ss-eY-aYp"/>
                            <constraint firstItem="cyY-xG-j5b" firstAttribute="leading" secondItem="Xof-lh-eff" secondAttribute="leading" id="5B5-kx-Fjo"/>
                            <constraint firstItem="4Qq-sF-anC" firstAttribute="trailing" secondItem="Xof-lh-eff" secondAttribute="trailing" id="VFe-1g-jRI"/>
                            <constraint firstItem="4Qq-sF-anC" firstAttribute="top" secondItem="Xof-lh-eff" secondAttribute="top" id="YyT-bH-dq4"/>
                            <constraint firstItem="cyY-xG-j5b" firstAttribute="bottom" secondItem="Xof-lh-eff" secondAttribute="bottom" id="bsc-4Q-ONu"/>
                            <constraint firstItem="4Qq-sF-anC" firstAttribute="leading" secondItem="Xof-lh-eff" secondAttribute="leading" id="pLZ-k3-598"/>
                            <constraint firstItem="cyY-xG-j5b" firstAttribute="trailing" secondItem="Xof-lh-eff" secondAttribute="trailing" id="rrI-Jg-RvK"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Xof-lh-eff"/>
                    </view>
                    <connections>
                        <outlet property="searchBar" destination="4Qq-sF-anC" id="S65-0y-8sq"/>
                        <outlet property="tableView" destination="cyY-xG-j5b" id="y2K-1Z-bvS"/>
                        <segue destination="Sbz-2B-Tvq" kind="show" identifier="showDetail" id="X3G-8Q-t9t"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fSc-Fj-e6J" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1661.5999999999999" y="-663.41829085457277"/>
        </scene>
        <!--Awesome News-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="NewsListViewController" customModule="AwesomeNewsApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XnL-as-wJD">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="5Zf-ey-mP0"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="XnL-as-wJD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="IAv-SJ-chO"/>
                            <constraint firstItem="XnL-as-wJD" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Qoc-4g-ucH"/>
                            <constraint firstItem="XnL-as-wJD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fhL-W4-N1k"/>
                            <constraint firstItem="XnL-as-wJD" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="hbg-jn-Mxy"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Awesome News" id="lpM-mZ-E6S">
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="search" id="eYe-Dy-8Hb">
                            <connections>
                                <segue destination="KIs-mH-x4w" kind="show" identifier="goSearch" id="lWu-0p-Ual"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="tableView" destination="XnL-as-wJD" id="imO-uR-Oxw"/>
                        <segue destination="Sbz-2B-Tvq" kind="show" identifier="showDetail" id="rfh-yQ-ZIK"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="746" y="-663"/>
        </scene>
        <!--News Detail View Controller-->
        <scene sceneID="whI-vZ-7FB">
            <objects>
                <viewController id="Sbz-2B-Tvq" customClass="NewsDetailViewController" customModule="AwesomeNewsApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="iEO-K2-Na6">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="newsDetailView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <viewLayoutGuide key="safeArea" id="ze0-qP-qVH"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="LbK-lw-CNd" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1662" y="-1432"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="fVZ-Wu-4ei">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mD5-43-gLT" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pkX-c2-ymc">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="mLI-Rx-Jj9"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="OLZ-WF-bHd" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-108" y="-663.41829085457277"/>
        </scene>
    </scenes>
    <inferredMetricsTieBreakers>
        <segue reference="X3G-8Q-t9t"/>
    </inferredMetricsTieBreakers>
</document>
